tests/import_declare_alias/foo.js
export type Foo = LibFoo

var x: Foo = 0 // error
